[project]
name = "apify-apple-app-store-api"
version = "0.1.0"
description = "Example client for the Apple App Store API Apify Actors (Search, Product, Reviews)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
